[package]
name = "atty"
version = "0.2.4"
authors = ["softprops <d.tangren@gmail.com>"]
description = "A simple interface for querying atty"
documentation = "http://softprops.github.io/atty"
homepage = "https://github.com/softprops/atty"
repository = "https://github.com/softprops/atty"
keywords = ["terminal", "tty"]
license = "MIT"
readme = "README.md"

[badges]
travis-ci = { repository = "softprops/atty" }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", default-features = false }

[target.'cfg(windows)'.dependencies]
kernel32-sys = "0.2"
winapi = "0.2"

[target.'cfg(target_os = "redox")'.dependencies]
termion = "1.5"
